<?xml version="1.0"?>
<package format="3">
  <name>mesh_msgs</name>
  <version>1.1.0</version>
  <description>Various Message Types for Mesh Data.</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="hdeeken@uos.de">Henning Deeken</author>
  <author email="jvogtherr@uos.de">Jan Philipp Vogtherr</author>
  <author email="rdiederichse@uos.de">Rasmus Diederichsen</author>
  <author email="cswan@uos.de">Christian Swan</author>

  <url type="website">http://wiki.ros.org/mesh_tools/mesh_msgs</url>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
